2005-06-13  Jonathan Pryor <jonpryor@vt.edu>

	* man/mono-shlib-cop.1: Add man page for mono-shlib-cop program.

2005-06-13  Jonathan Pryor <jonpryor@vt.edu>

	* data/config.in: Fix generated XML.

2005-06-13  Jonathan Pryor <jonpryor@vt.edu>

	* scripts/Makefile.am: Add mono-shlib-cop.

2005-06-09  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Handle more gracefully if objdump or X isn't
	there. Warn the user about possible breakage.

2005-06-08  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: read the SONAME from libX11. This is the same
	thing as will be used by a shared library, so it will really
	work.

	This will have us get libX11.so.6 rather than libX11.so.6.2.

2005-06-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: make automake 1.9 happy about LARGE_FILES.

2005-06-06  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Add checks for mremap, remap_file_pages.

2005-06-06  Ben Maurer  <bmaurer@ximian.com>

	* mono.spec.in: Remove. This is horribly out of date. A real spec
	file is generated in the release module.

	* scripts/Makefile.am: Add mono-find-*

	* scripts/mono-find-*.in: provides/requires stuff for rpm is now
	done with monodis. This makes packaging easier as it doesn't
	depend on the gac ind DESTDIR.

	* configure.in: changes for the above

2005-05-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: added test for SIOCGIFCONF.

2005-05-26  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* README.vsnet: Instructions about the VS.NET build.
	* mono.sln: Mono solution file for VS.NET 2005.
	* genmdesc.vcproj: Project file for genmdesc.
	* libmono.vcproj: Project file for libmono.
	* mono.vcproj: Project file for mono executable.

2005-05-25  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Do a test for libX11.so that really works :-).

2005-05-22  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Add config stuff for libsqlite{,3} and
	libX11.
